--- a/.env
+++ b/.env
@@ -3,3 +3,18 @@ DBUSER = admin
 DBPASS = Numero12345$.
 DBPORT = 3306
 DBNAME = restaurantdb
+
+
+PORT="1883"
+MQTTHOST="3.92.28.48"
+MQTTUSER='mario'
+MQTTPASS='Numero12345$.'
+
+#   host: process.env.DBHOST,
+#   user: process.env.DBUSER,
+#   password: process.env.DBPASS,
+#   port: process.env.DBPORT,
+#   database: process.env.DBNAME,
+#   connectionLimit: 10
+     
+
