--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DBHOST = restaurantdb.cvs228eq62eg.us-east-1.rds.amazonaws.com
-DBUSER = admin
-DBPASS = Numero12345$.
-DBPORT = 3306
-DBNAME = restaurantdb
+DBHOST="restaurantdb.cvs228eq62eg.us-east-1.rds.amazonaws.com"
+DBUSER="admin"
+DBPASS="Numero12345$."
+DBPORT="3306"
+DBNAME="restaurantdb"
 
 
 PORT="1883"
