Minor API changes

--- a/.env
+++ b/.env
@@ -3,10 +3,8 @@ DBUSER="admin"
 DBPASS="Numero12345$."
 DBPORT="3306"
 DBNAME="restaurantdb"
-
-
-PORT="1883"
-MQTTHOST="54.173.44.201" 
+PORT=3000
+MQTTHOST="54.173.44.201:8080" 
 MQTTUSER='mario'
 MQTTPASS='Numero12345$.'
 
